<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="error_google_sign_in">Google sign-in failed. Please try again.</string>
    <string name="error_no_google_account">No Google account found on this device. Add one in Settings and try again.</string>
    <string name="label_map">Map</string>
    <string name="label_list">List</string>
    <string name="label_workmates">Workmates</string>
    <string name="recenter_on_my_location">Recenter on my location</string>
    <string name="error_location_unavailable">Unable to get your location. Please try again.</string>
    <string name="error_location_permission_denied">Location access is needed to show nearby restaurants.</string>
    <string name="error_restaurants_unavailable">Unable to load nearby restaurants.</string>
    <string name="retry">Retry</string>
    <string name="settings">Settings</string>
    <string name="error_restaurant_details_unavailable">Unable to load restaurant details.</string>
    <string name="error_toggle_like">Unable to update like. Please try again.</string>
    <string name="error_choose_restaurant">Unable to save your choice. Please try again.</string>
    <string name="restaurant_chosen_confirmation">You\'re set for lunch here today!</string>
    <string name="call_restaurant">Call</string>
    <string name="visit_website">Website</string>
    <string name="like_restaurant">Like</string>
    <string name="choose_this_restaurant">Choose this restaurant</string>
    <string name="back">Back</string>
    <plurals name="colleagues_interested">
        <item quantity="one">%d colleague going here today</item>
        <item quantity="other">%d colleagues going here today</item>
    </plurals>
</resources>